# trae-RAG

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GitHub上传指南.md  LICENSE  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt  upload_to_github.sh  关键决策点  项目框架.txt
docker/fastapi/: Dockerfile
docker/grafana/provisioning/datasources/: prometheus.yml
docker/nginx/: nginx.conf
docker/nginx/conf.d/: cache.conf  default.conf  ssl.conf
docker/prometheus/: prometheus.yml
docker/redis/: redis.conf
docs/: 系统说明文档.md
docs/RAG系统优化/: ACCEPTANCE_RAG系统优化.md  ALIGNMENT_RAG系统优化.md  CONSENSUS_RAG系统优化.md  DESIGN_RAG系统优化.md  TASK_RAG系统优化.md
scripts/: nginx-setup.sh  setup.sh
src/: __init__.py  main.py
src/api/: __init__.py  middleware.py  models.py
src/api/routes/: __init__.py  documents.py  qa.py  system.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  document_processor.py  qa_processor.py  rag_engine.py
src/utils/: __init__.py  cache.py  logger.py  metrics.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_document_processor.py  test_qa_processor.py
tests/integration/: test_document_workflow.py  test_qa_workflow.py
tests/performance/: test_system_performance.py
tests/security/: test_security.py
